新增topic2,3跟介面微調
待辦:
新增4,5

--- a/templates/topic_1.html
+++ b/templates/topic_1.html
@@ -150,7 +150,7 @@
             output = document.getElementById('output_define').value
             sample_i = document.getElementById('s_i').value
             sample_o = document.getElementById('s_o').value
-            
+            hint = document.getElementById('hint').value
             p_raw = document.getElementsByClassName('add_frame')
             
             for(var i =0;i<p_raw.length;i++){
