--- a/templates/topic_3.html
+++ b/templates/topic_3.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='prompt_build.css') }}">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <title>TOPIC 2 EXTEND</title>
+        <title>TOPIC 3</title>
     </head>
     <body>
         <div class="main">
@@ -23,7 +23,7 @@
                         <input type="text"id="input_define" name="prompti" placeholder="整數，單行輸入，代表數字" required>
                         <p>型別種類:(多)整數、字串、(二維)串列、浮點數、字典...</p>
                         <p>輸入格式:單行輸入、多行輸入</p>
-                        <p>輸入意涵:代表月數、天數、班表、第n項費伯數列...</p>
+                        <p>輸入意涵:代表月數、天數、第n項費伯數列...</p>
                     </fieldset>
                 </div>
                 <div class ="c_output">
@@ -71,29 +71,20 @@
                 <div class ="hint">
                     <fieldset>
                         <legend>關鍵提示</legend>
-                        <input type="text" id="hint" placeholder="如果....則輸出......">
+                        <input type="text" id="hint" placeholder="">
                     </fieldset>
                 </div>
                 <!-- <input class="button-33" id= "search" style="background-color:	#00BB00;" value="Search"> -->
-                <!-- <input class="button-33" type="submit" value="Ask AI"> -->
-                <input class="button-33" id= "search" style="background-color:	#00BB00;" value="Search">
+                <input class="button-33" type="submit" value="Ask AI">
             </div>
-            <div id="target-content">
-                <div class="popup-header">
-                    <span style="font-weight:bold">Check Search Result: </span>
-                    <button id="btnpopclose" class="popup-close">×</button>
-                </div>
-                <div name="prompt-content">
-                    <h3 style="text-align: center;">處理方式:<span id="g"></span></h3>
-                    <h3 style="text-align: center;">應用到的程式概念為:<span id="k"></span></h3>
-                </div>
-                <hr>
-                <div name="prompt-content">
-                    <h3 style="text-align: center;">相關範例題目搜尋結果</h3>
-                    <div id="old"></div>
-                </div>
-                <input class="button-33" style="top:50%;left:50%;bottom: 20px;;" type="submit" value="Ask AI">
-            </div>
+            
+            <!-- <div class="add_frame">
+                <label for="name">參數名稱:</label>
+                <input type="text" class="parameter" name="p_n" placeholder="a">
+                <label for="type">參數型別:</label>
+                <input type="text" class="parameter" name="p_t" placeholder="int、str、list">
+                <button class="button-34" style="background-color:#EA0000"onclick="delete_memory()">刪除參數</button>
+            </div> -->
         </div>
     </body>
 </html>
@@ -111,25 +102,21 @@
    var sample_o
    var parameters = []
 
-   
-   var extend = "中央咖啡店老闆要舉辦為期三天的員工旅遊，假設一天只有一班分別以0代表沒班1代表有班，\n"+
-                "現在老闆有一班表串列，請幫忙老闆找出可以沒班的連續三天為哪幾天?"
-   var iao   =  "範例輸入:\n"+
-                "0,0,1,1,0,0,0,1,0,0,1,1,1,1,1,1,0,0\n"+
-                "範例輸出:\n"+
-                "['第5天', '第6天', '第7天']"
+   var basic = problems[0]['Problem_Description']
+   basic = basic.replace(/\n/g,'<br>')
+
+   var iao = problems[0]['IAO']
    iao = iao.replace(/\n/g,'<br>')
-   extend = extend.replace(/\n/g,'<br>')
    
    $(document).ready(function () {
-        document.getElementById("problem_d").innerHTML = extend
+        document.getElementById("problem_d").innerHTML = basic
         document.getElementById("problem_iao").innerHTML = iao
    });
    $('input[type=radio][name="promptc"]').on('change', function() {
         category = $(this).val()
    })
-   $('input[type=checkbox][name="promptk"]:checked').each(function(){
-        keyword+=this.value
+   $('input[type=radio][name="promptk"]').on('change', function() {
+        keyword = $(this).val()
    })
 
    var add_div=1;
@@ -138,12 +125,13 @@
         obj.id = "add_"+add_div
         obj.innerHTML='<div class="add_frame">\n'+
                     '<label for="name">參數名稱:</label>\n'+
-                    '<input type="text" class="parameter" name="p_n" id="p_n" placeholder="schedule">\n'+
+                    '<input type="text" class="parameter" name="p_n" id="p_n" placeholder="a">\n'+
                     '<label for="type">參數型別:</label>\n'+
                     '<input type="text" class="parameter" name="p_t" id="p_t" placeholder="int、str、list...">\n'+
-                    '<button class="button-35" style="padding-right:0px;" onclick="delete_memory(this)">刪除</button>\n'+
+                    '<button class="button-35" onclick="delete_memory(this)">刪除</button>\n'+
                 '</div>\n'
         add_div++
+        // obj.setAttribute("style","text-align:left")
         document.getElementById('m_c').appendChild(obj)
    }
 
@@ -152,89 +140,11 @@
         var obj = document.getElementById(id)
         document.getElementById('m_c').removeChild(obj)
    }
-   var display = ""
-   $('#btnpopclose').click(function(){
-        keyword = []
-        category = ""
-        display = ""
-        $('input[type=checkbox][name="promptk"]').prop("checked",false)
-        $('input[type=radio][name="promptc"]').prop("checked",false)
-        $('#g').html(category)
-        $('#k').html(keyword)
-        $('#old').html(display)
-        $('#target-content').hide()
-   })
-   //點選完進行索引
-   $('#search').click(function(){
-        $('input[type=checkbox][name="promptk"]:checked').each(function(){
-                    keyword.push(this.value)
-        })
-        var search_case = {
-            
-            Category:category,
-            Keyword:keyword,
-        }
-        // console.log(prompt)
-        
-        //ajax開始
-        $.ajax({
-                type:"POST",
-                url:"/search",
-                data:JSON.stringify(search_case),
-                contentType:"application/json",
-                dataType:'json',
-                success:function(result){
-                    $('#g').html(category)
-                    $('#k').html(keyword)
-                    // console.log(result)
-                    
-                    
-                    // console.log(element)
-                    var t1 = "<h4 style=\"text-align:center\">"+result['description']+"</h4>"
-                    t1 = t1.replace(/\n/g,'<br>')
-                    description += result['description']
-                    var t2 = "<h4 style=\"text-align:center\">"+result['solution']+"</h4>"
-                    t2 = t2.replace(/\n/g,'<br>')
-                    solution += result['solution']
-                    display+=t1
-                    display+="<br>"
-                    display+=t2
-                    // console.log(display)
-                        
-                    
-                    $('#old').html(display)
-                    $('#target-content').show()
-                }
-        })
-        
-   })
-   //
-   //將索引產出之舊問題整理
-   function check_category(category){
-        if (category=="迴圈"){
-            return true
-        }else{
-            return false
-        }
-   }
 
-   function check_keyword(keyword){
-        check_1 = ['for','if_else']
-        check_2 = ['if_else','for']
-
-        if (keyword.length!==2){
-            return false;
-        }
-
-        for (var i = 0; i < keyword.length; ++i) {
-            if (keyword[i] !== check_1[i]&&keyword[i] !== check_2[i]) {
-                return false
-            }
-            
-        }
-
-        return true
-   }
+//    $('#btnpopclose').click(function(){
+//         $('#target-content').hide();
+//    })
+   
    //送出
    $('input[type=submit]').click(function(){
             input = document.getElementById('input_define').value
@@ -242,8 +152,6 @@
             sample_i = document.getElementById('s_i').value
             sample_o = document.getElementById('s_o').value
             hint = document.getElementById('hint').value
-            
-
             p_raw = document.getElementsByClassName('add_frame')
             
             for(var i =0;i<p_raw.length;i++){
@@ -255,10 +163,13 @@
                 }
                 parameters.push(temp)
             }
+            $('input[type=checkbox][name="promptk"]:checked').each(function(){
+                    keyword.push(this.value)
+            })
 
             var choice={
-                        Mode:2,
-                        Topic:2,
+                        Mode:1,
+                        Topic:3,
                         Input:input,
                         Output:output,
                         S_input:sample_i,
@@ -266,41 +177,22 @@
                         Category:category,
                         Keyword:keyword,
                         Parameters:parameters,
-                        Problem_n:extend.toString(),
+                        Problem_n:basic.toString(),
                         Problem_o:description,
                         Solution:solution,
                         Hint:hint,
             }
-            
-            if (check_category(category) &&  check_keyword(keyword)){
-                $.ajax({
-                    type:"POST",
-                    url:"/result",
-                    data:JSON.stringify(choice),
-                    contentType:"application/json",
-                    dataType:'json',
-                    success:function(result){
-                        keyword = []
-                        category = ""
-                        display = ""
-                        $('input[type=checkbox][name="promptk"]').prop("checked",false)
-                        $('input[type=radio][name="promptc"]').prop("checked",false)
-                        $('#g').html(category)
-                        $('#k').html(keyword)
-                        $('#old').html(display)
-                        $('#target-content').hide()
-                        window.location.href = "/result"
-                    }
-                })
-            }else{
-                if (!check_category(category)){
-                    alert("主要處理方式選擇有誤，請重新選擇")
+            // console.log(choice)
+            $.ajax({
+                type:"POST",
+                url:"/result",
+                data:JSON.stringify(choice),
+                contentType:"application/json",
+                dataType:'json',
+                success:function(result){
+                    window.location.href = "/result"
                 }
-                
-                if (!check_keyword(keyword)){
-                    alert("程式概念選擇有誤，請重新選擇")
-                }
-            }
+            })
     });
 
 </script>
