--- a/templates/topic_3_e.html
+++ b/templates/topic_3_e.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='prompt_build.css') }}">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <title>TOPIC 2 EXTEND</title>
+        <title>TOPIC 3 EXTEND</title>
     </head>
     <body>
         <div class="main">
@@ -23,7 +23,7 @@
                         <input type="text"id="input_define" name="prompti" placeholder="整數，單行輸入，代表數字" required>
                         <p>型別種類:(多)整數、字串、(二維)串列、浮點數、字典...</p>
                         <p>輸入格式:單行輸入、多行輸入</p>
-                        <p>輸入意涵:代表月數、天數、班表、第n項費伯數列...</p>
+                        <p>輸入意涵:代表月數、天數、第n項費伯數列...</p>
                     </fieldset>
                 </div>
                 <div class ="c_output">
@@ -52,7 +52,7 @@
                 </div>
                 <div class="c_category">
                     <fieldset>
-                        <legend>主要處理方式</legend>
+                        <legend>處理方式</legend>
                         {% for category in categorys %}
                             <input type="radio" name="promptc" value="{{category}}"></input>
                             <label for="{{category}}">{{category}}</label>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="c_keyword">
                     <fieldset>
-                        <legend>應用到的程式概念(複選)</legend>
+                        <legend>處理方式轉換程式概念</legend>
                         {% for keyword in keywords %}
                             <input type="checkbox" name="promptk" value="{{keyword}}"></input>
                             <label for="{{keyword}}">{{keyword}}</label>
@@ -70,8 +70,8 @@
                 </div>
                 <div class ="hint">
                     <fieldset>
-                        <legend>關鍵提示</legend>
-                        <input type="text" id="hint" placeholder="如果....則輸出......">
+                        <legend>關鍵提示(思考最小情況)</legend>
+                        <input type="text" id="hint" placeholder="當lots=1時回傳1、lots=2時回傳2、lots=3時回傳...、">
                     </fieldset>
                 </div>
                 <!-- <input class="button-33" id= "search" style="background-color:	#00BB00;" value="Search"> -->
@@ -85,7 +85,7 @@
                 </div>
                 <div name="prompt-content">
                     <h3 style="text-align: center;">處理方式:<span id="g"></span></h3>
-                    <h3 style="text-align: center;">應用到的程式概念為:<span id="k"></span></h3>
+                    <h3 style="text-align: center;">處理方式轉換程式概念:<span id="k"></span></h3>
                 </div>
                 <hr>
                 <div name="prompt-content">
@@ -112,12 +112,12 @@
    var parameters = []
 
    
-   var extend = "中央咖啡店老闆要舉辦為期三天的員工旅遊，假設一天只有一班分別以0代表沒班1代表有班，\n"+
-                "現在老闆有一班表串列，請幫忙老闆找出可以沒班的連續三天為哪幾天?"
+   var extend = "當兵新訓一個月後要下部隊抽籤，班長從籤袋中一次拿三或二或一支籤分派單位\n"+
+                "假設n為籤袋中的總籤數，請問當輸入為n時，班長抽完籤的方法數共有幾種。"
    var iao   =  "範例輸入:\n"+
-                "0,0,1,1,0,0,0,1,0,0,1,1,1,1,1,1,0,0\n"+
+                "4\n"+
                 "範例輸出:\n"+
-                "['第5天', '第6天', '第7天']"
+                "7"
    iao = iao.replace(/\n/g,'<br>')
    extend = extend.replace(/\n/g,'<br>')
    
@@ -138,12 +138,13 @@
         obj.id = "add_"+add_div
         obj.innerHTML='<div class="add_frame">\n'+
                     '<label for="name">參數名稱:</label>\n'+
-                    '<input type="text" class="parameter" name="p_n" id="p_n" placeholder="schedule">\n'+
+                    '<input type="text" class="parameter" name="p_n" id="p_n" placeholder="lots">\n'+
                     '<label for="type">參數型別:</label>\n'+
                     '<input type="text" class="parameter" name="p_t" id="p_t" placeholder="int、str、list...">\n'+
-                    '<button class="button-35" style="padding-right:0px;" onclick="delete_memory(this)">刪除</button>\n'+
+                    '<button class="button-35" onclick="delete_memory(this)">刪除</button>\n'+
                 '</div>\n'
         add_div++
+        // obj.setAttribute("style","text-align:left")
         document.getElementById('m_c').appendChild(obj)
    }
 
@@ -162,7 +163,7 @@
         $('#g').html(category)
         $('#k').html(keyword)
         $('#old').html(display)
-        $('#target-content').hide()
+        $('#target-content').hide();
    })
    //點選完進行索引
    $('#search').click(function(){
@@ -175,7 +176,7 @@
             Keyword:keyword,
         }
         // console.log(prompt)
-        
+
         //ajax開始
         $.ajax({
                 type:"POST",
@@ -188,8 +189,6 @@
                     $('#k').html(keyword)
                     // console.log(result)
                     
-                    
-                    // console.log(element)
                     var t1 = "<h4 style=\"text-align:center\">"+result['description']+"</h4>"
                     t1 = t1.replace(/\n/g,'<br>')
                     description += result['description']
@@ -199,9 +198,6 @@
                     display+=t1
                     display+="<br>"
                     display+=t2
-                    // console.log(display)
-                        
-                    
                     $('#old').html(display)
                     $('#target-content').show()
                 }
@@ -211,7 +207,7 @@
    //
    //將索引產出之舊問題整理
    function check_category(category){
-        if (category=="迴圈"){
+        if (category=="遞迴"){
             return true
         }else{
             return false
@@ -219,18 +215,16 @@
    }
 
    function check_keyword(keyword){
-        check_1 = ['for','if_else']
-        check_2 = ['if_else','for']
+        check_1 = ['recursion']
 
-        if (keyword.length!==2){
+        if (keyword.length!==1){
             return false;
         }
 
         for (var i = 0; i < keyword.length; ++i) {
-            if (keyword[i] !== check_1[i]&&keyword[i] !== check_2[i]) {
+            if (keyword[i] !== check_1[i]) {
                 return false
             }
-            
         }
 
         return true
@@ -243,7 +237,6 @@
             sample_o = document.getElementById('s_o').value
             hint = document.getElementById('hint').value
             
-
             p_raw = document.getElementsByClassName('add_frame')
             
             for(var i =0;i<p_raw.length;i++){
@@ -258,7 +251,7 @@
 
             var choice={
                         Mode:2,
-                        Topic:2,
+                        Topic:3,
                         Input:input,
                         Output:output,
                         S_input:sample_i,
@@ -271,7 +264,6 @@
                         Solution:solution,
                         Hint:hint,
             }
-            
             if (check_category(category) &&  check_keyword(keyword)){
                 $.ajax({
                     type:"POST",
@@ -288,7 +280,7 @@
                         $('#g').html(category)
                         $('#k').html(keyword)
                         $('#old').html(display)
-                        $('#target-content').hide()
+                        $('#target-content').hide();
                         window.location.href = "/result"
                     }
                 })
