--- a/static/prompt_build.css
+++ b/static/prompt_build.css
@@ -15,7 +15,7 @@ body{
     width: 30%;
     margin: 10px;
     background-color: #fff;
-    height: 95%;
+    height: auto;
     justify-content: center;
     text-align: center;
     color: #000;
@@ -27,7 +27,7 @@ body{
 }
 .n_problem{
     text-align: center;
-    margin-top: 200px;
+    margin-top: 50px;
 }
 
 p{
@@ -75,17 +75,17 @@ legend {
 .button-33 {
   position: relative;
   margin-top: 30px;  
-  left: 5%;
+  left: 8%;
   transform: translate(-50%, -50%);
   background-color: 	#0066CC;
   border-radius: 12px;
   color: #fff;
   cursor: pointer;
   font-weight: bold;
-  padding: 10px 15px;
+  padding: 5px 10px;
   text-align: center;
   transition: 200ms;
-  width: 10%;
+  width: 15%;
   box-sizing: border-box;
   border: 0;
   font-size: 16px;
@@ -110,17 +110,17 @@ legend {
 .button-34 {
   position: relative;
   margin-top: 20px;  
-  left: 5%;
+  left: 8%;
   transform: translate(-50%, -50%);
   background-color: 	#FF8000;
   border-radius: 12px;
   color: #fff;
   cursor: pointer;
   font-weight: bold;
-  padding: 5px 10px;
+  
   text-align: center;
   transition: 200ms;
-  width: 10%;
+  width: 15%;
   box-sizing: border-box;
   border: 0;
   font-size: 14px;
@@ -184,7 +184,7 @@ legend {
 .add_frame{
   display: inline-block;
   margin-top: 10px;
-  width: 800px;
+  width: 650px;
 }
 .sample{
   display: inline-block;
