--- a/templates/result_pre.html
+++ b/templates/result_pre.html
@@ -21,6 +21,8 @@
                         <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_2_extend '">
                     {% elif topic == 1 %}
                         <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_1_extend '">
+                    {% elif topic == 3 %}
+                        <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_3_extend '">
                     {% endif %}
                 {% else %}
                 <div id = "final">
